[tool.poetry]
name = "chatgpt-commit-messages"
version = "0.1.0"
description = ""
authors = ["Tibor Pilz <tibor.pilz@avenga.com>"]
readme = "README.md"
packages = [{include = "chatgpt_commit_messages"}]

[tool.poetry.dependencies]
python = "^3.10"
revchatgpt = "^0.0.34.1"
gitpython = "^3.1.29"
typer = {extras = ["all"], version = "^0.7.0"}
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
