[tool.poetry]
name = "commitomatic"
version = "0.1.1"
description = ""
authors = ["Tibor Pilz <tibor@pilz.berlin>"]
readme = "README.md"
packages = [{include = "commitomatic"}]

[tool.poetry.dependencies]
python = "^3.10"
revchatgpt = "^0.0.34.1"
typer = {extras = ["all"], version = "^0.7.0"}
pyperclip = "^1.8.2"
gitpython = "^3.1.29"
pyfzf = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
commitomatic = "commitomatic.cli:main"
