[tool.poetry]
name = "commitomatic"
version = "0.1.1"
description = ""
authors = ["Tibor Pilz <tibor@pilz.berlin>"]
readme = "README.md"
packages = [{include = "commitomatic"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
pyperclip = "^1.8.2"
gitpython = "^3.1.29"
pyfzf = "^0.3.1"
openai = "^0.25.0"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
commitomatic = "commitomatic.cli:main"
